# sonic-buildimage

./: .gitignore  .gitmodules  ASPEED_BMC_OPTIMIZATION_DETAILED_ANALYSIS.md  BUILD.bazel  build_debian.sh  slave.mk
.github/workflows/: safe-sync.yml
device/nexthop/arm64-nexthop_b27-r0/: init_cfg.json
device/nexthop/x86_64-nexthop_4005-r0011/: platform.json  platform_components.json  sensors.conf  thermal_policy.json
device/nexthop/x86_64-nexthop_4005-r0020/: platform.json  sensors.conf
device/nexthop/x86_64-nexthop_4005-r0021/: feature_capabilities.json  platform.json  sensors.conf
device/nexthop/x86_64-nexthop_4010-r0/: pcie.yaml.j2  platform.json  platform_components.json  sensors.conf
device/nexthop/x86_64-nexthop_4010-r1/: platform.json
device/nexthop/x86_64-nexthop_4020-r0/: pcie.yaml.j2  platform.json
device/nexthop/x86_64-nexthop_4210-r0021/: platform.json  sensors.conf  thermal_policy.json
device/nexthop/x86_64-nexthop_4220-r0/: platform.json  sensors.conf
device/nexthop/x86_64-nexthop_4220-r0021/: platform.json  sensors.conf  thermal_policy.json
device/nexthop/x86_64-nexthop_4220-r1010/: platform.json  sensors.conf
device/nexthop/x86_64-nexthop_4220-r1021/: platform.json  platform_components.json  sensors.conf
device/nexthop/x86_64-nexthop_5010-r0/: pcie-variables.yaml  platform.json  platform_components.json  sai_postinit_cmd.soc  sensors.conf  thermal_policy.json
device/nexthop/x86_64-nexthop_cf2_standalone-r0/: platform.json
device/nokia/x86_64-nokia_ixr7220_h6_128-r0/: platform.json
dockers/docker-macsec/cli-plugin-tests/: test_config_macsec.py
dockers/docker-orchagent/: orchagent.sh
dockers/docker-platform-monitor/: critical_processes
files/build_scripts/: aspeed_bmc_filter_services.py
files/build_templates/: docker_image_ctl.j2  init_cfg.json.j2  pmon.service.j2  sonic_debian_extension.j2
platform/aspeed/: build-emmc-image-installer.sh  rules.mk
platform/broadcom/: one-image.mk  platform-modules-nexthop.mk  sai-dnx.mk  sai-modules.mk
platform/components/: docker-gbsyncd-agera2.mk
rules/: config  docker-platform-monitor.mk  ifupdown2.mk  sonic-bmcctld.dep  sonic-bmcctld.mk  sonic-utilities.mk
sonic-slave-bookworm/: Dockerfile.j2
sonic-slave-trixie/: Dockerfile.j2
(+170 files in other folders)
